--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "classes_inheritance",
+  "name": "methods",
   "version": "1.0.0",
   "description": "**Важно**: каждая задача выполняется в виде отдельного проекта с собственным GitHub репозиторием.",
   "main": "index.js",
